# CppND-TiaG

./: .gitignore  CMakeLists.txt  README.md
This Is a Game.xcodeproj/: project.pbxproj
This Is a Game.xcodeproj/project.xcworkspace/xcuserdata/ricardo.marginador.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
This Is a Game.xcodeproj/xcshareddata/xcschemes/: This Is a Game.xcscheme
This Is a Game.xcodeproj/xcuserdata/ricardo.marginador.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Assets.cpp  Assets.hpp  Character.cpp  Character.hpp  Constants.cpp  Constants.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Time.cpp  Time.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
